--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,20 @@
   display: flex;
   flex-direction: row;
 }
+
+body {
+  font-family: poppins;
+  box-sizing: border-box;
+}
+
+p {
+  margin: 0;
+}
+
+input {
+  font-family: poppins;
+}
+
+button {
+  font-family: poppins;
+}
