--- a/src/discover/discover.css
+++ b/src/discover/discover.css
@@ -1,3 +1,275 @@
 #discover-body {
- 
+    height: 95%;
+    padding: 2vh;
+    box-sizing: border-box;
+}
+
+#discover-search-container {
+    width: 100%;
+    height: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1vh;
+}
+
+#discover-main-container {
+    width: 100%;
+    height: 87.5%;
+    box-sizing: border-box;
+    padding: 1vh;
+    padding-bottom: 0vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+#discover-description {
+    color: rgba(77, 62, 62, 0.6);
+    font-size: 14px;
+    margin-bottom: 12px;
+}
+
+#discover-searchbar {
+    outline: none;
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.5);
+}
+
+#discover-workerlist {
+    width: 25%;
+    height: 100%;
+    border-radius: 10px;
+    background-color: #FBE6D4;
+    display: flex;
+    flex-direction: column;
+    padding: 2vh;
+    box-sizing: border-box;
+}
+
+#discover-mapandstats {
+    width: 74%;
+    height: 100%;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#discover-stats {
+    height: 38%;
+    width: 100%;
+    border-radius: 10px;
+    background-color: #FBE6D4;
+    box-sizing: border-box;
+    padding: 2vh;
+}
+
+#discover-worker-header {
+    margin: 0;
+    color: rgba(87, 73, 73, 1);
+}
+
+#discover-workerdesc {
+    margin: 0;
+    font-size: 12px;
+    margin-bottom: 2vh;
+}
+
+#discover-workercards {
+    height: 100%;
+    overflow: auto;
+}
+
+#discover-searchbutton {
+    outline: none;
+    border: none;
+    margin-left: 10px;
+    border-radius: 10px;
+    background-color: rgba(255, 195, 139, 1);
+    padding: 10px;
+    font-size: 12px;
+    cursor: pointer;
+}
+
+#discover-searchbutton:hover {
+    background-color: rgb(255, 172, 94);
+}
+
+/* Stuff for the cards */
+
+.workercard-body {
+    background-color: white;
+    min-width: 100%;
+    height: 11.5%;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: row;
+    padding: 1vh;
+    box-sizing: border-box;
+    align-items: center;
+    cursor: pointer;
+    white-space: nowrap;
+    margin-bottom: 10px;
+    overflow: hidden;
+}
+
+.workercard-body:hover {
+    background-color: rgb(238, 231, 231);
+}
+
+.workercard-pfp {
+    height: 50px;
+    width: 50px;
+    margin-right: 1vw;
+    border-radius: 25px;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.workercard-pfpimage {
+    height: 100px;
+    margin-bottom: 10px;
+}
+
+.workercard-name {
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.workercard-job {
+    font-size: 12px;
+    font-weight: 300;
+    margin-bottom: 0.5vh;
+}
+
+.workercard-quote {
+    font-size: 12px;
+    font-style: italic;
+    color: rgba(0, 0, 0, 0.5)
+}
+
+
+/* Stuff in the portfolio */
+
+#discover-name {
+    margin: 0;
+}
+
+#discover-portfolio {
+    font-weight: 300;
+    font-size: 14px;
+}
+
+#discover-photoportfolio {
+    height: 100%;
+    width: 60%;
+    background-color: white;
+    border-radius: 10px;
+}
+
+#discover-statsgrid {
+    display: grid;
+    grid-template-columns: 7.5vw 7.5vw 7.5vw;
+    grid-template-rows: 10vh 10vh;
+}
+
+.discover-metric {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.discover-ratingnum {
+    margin: 0;
+    font-size: 14px;
+}
+
+.discover-ratingbg {
+    background-color: #FFC38B;
+    min-width: 4vh;
+    min-height: 4vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 3vh;
+    margin-bottom: 5px;
+}
+
+.discover-ratingtype {
+    font-size: 12px;
+}
+
+#discover-stats {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* Stuff in the map */
+
+#discover-map {
+    height: 60%;
+    width: 100%;
+    border-radius: 10px;
+    background-color: #FBE6D4;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 2vh;
+    box-sizing: border-box;
+}
+
+#discover-mapbody {
+    height: 100%;
+    width: 70%;
+    background-color: white;
+    border-radius: 10px;
+}
+
+#discover-homeownersbody {
+    height: 100%;
+    width: 28%;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
+}
+
+/* Stuff in the homeowner cards */
+
+.homeowner-body {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 20%;
+    width: 100%;
+    background-color: white;
+    padding: 1vh;
+    box-sizing: border-box;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+
+.homeowner-name {
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.homeowner-job {
+    font-size: 12px;
+    font-weight: 300;
+}
+
+.homeowner-rating {
+    margin-top: 1vh;
+    font-size: 14px;
+    font-weight: 500;
 }
